[package]
name = "yt-post-dl-test1"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
inquire = "0.9.4"
# pollster = "0.4.0"
# regex = "1.12.3"
reqwest = { version = "0.13.2",  default-features = false, features = ["blocking", "native-tls"] }
rfd = "0.17.2"
scraper = "0.26.0"
tokio = {version = "1.52.1", features = ["full"]}
url = "2.5.8"
